Kubernetes/wisecow_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  labels:
    app: wisecow
    k8s-app-resource: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - mywisecowapp.com
    secretName: wisecow-ingress-tls
  rules:
    - host: "wisecow-ingress-tls"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-service
                port:
                  number: 4499
